# BibblIR

./: CMakeLists.txt
framework/: CMakeLists.txt
framework/include/BibblIR/: module.h
framework/include/BibblIR/bytecode/: utils.h
framework/include/BibblIR/ir/: basicblock.h  builder.h  function.h  global.h  instruction.h  value.h
framework/include/BibblIR/ir/constant/: constant_boolean.h  constant_int.h
framework/include/BibblIR/ir/instruction/: binary_instruction.h  branch_instruction.h  call_instruction.h  load_instruction.h  phi_instruction.h  return_instruction.h  unary_instruction.h
framework/include/BibblIR/optimizer/regalloc/: allocator.h  vreg.h
framework/include/BibblIR/type/: boolean_type.h  function_type.h  integer_type.h  type.h  void_type.h
framework/include/BibblIR/visitor/: codegen_visitor.h  print_visitor.h  visitor.h
framework/src/: module.cpp
framework/src/bytecode/: utils.cpp
framework/src/ir/: basicblock.cpp  builder.cpp  function.cpp  instruction.cpp
framework/src/ir/constant/: constant_boolean.cpp  constant_int.cpp
framework/src/ir/instruction/: binary_instruction.cpp  branch_instruction.cpp  call_instruction.cpp  load_instruction.cpp  phi_instruction.cpp  return_instruction.cpp  unary_instruction.cpp
framework/src/optimizer/regalloc/: allocator.cpp  vreg.cpp
framework/src/type/: boolean_type.cpp  function_type.cpp  integer_type.cpp  type.cpp  types.cpp  void_type.cpp
framework/src/visitor/: codegen_visitor.cpp  print_visitor.cpp
main/: CMakeLists.txt
main/src/: main.cpp
